--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -771,17 +771,17 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 
 This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs in a table and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
 
-This discussion begins to address the challenge of communicating the diverse mediational strategies beyond the list in the table as a more accessible and practical conceptual model. 
+This discussion begins to address the challenge of communicating the diverse mediational strategies beyond the list in the table as a more accessible and practical conceptual model.
 
 I then turn to the motivations and forms of the object of activity involved, it returns to concepts of flow and computational fluency present in CGD&P research.
 
+AND THEN SIGNPOSTS Ch.7 also
 
+### Addressing the use of GDPs in relation to understanding representing the processes of mediation process 
 
-AND THEN SIGNPOSTS
+Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
 
-### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity -
-
-Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. A fuller table now summarises this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
+This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. A fuller table now summarises this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
 
 
 INSERT TABLE HERE.
