Ch 5. discussion - adding mentions of agency. Signposting ch 6 discussion

--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -116,9 +116,14 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 <!-- **On GDP as a germ-cell and unit of analysis recap of design patterns** -->
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
-Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. The importance of gameplay design patterns (GDPs) emerged from participant input in P1 and were then integrated by myself into various forms of scaffolding within and graded step of practice including: quick-start activities, instructional tutorials, and code snippet examples. This chapter shifts focus to the perspectives of participants, using recorded data to interpret their varied uses and adaptations of GDP use. In doing so, it addresses the research question: How does CHAT theory help us understand how game design patterns can be used in an evolving community of novice game makers?  I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, not only addressing the use of facilitator-provided resources but also as part of emerging community practices and interpersonal repertoires.
+Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. The importance of gameplay design patterns (GDPs) emerged from participant input in P1 and were then integrated by myself into various forms of scaffolding within and graded step of practice including: quick-start activities, instructional tutorials, and code snippet examples. This chapter shifts focus to the perspectives of participants, using recorded data to interpret their varied uses and adaptations of GDP use. In doing so, it addresses the research question: How does CHAT theory help us understand how game design patterns can be used in an evolving community of novice game makers?  
 
-Outer pipes Cell padding
+
+While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006]. Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study.   
+
+I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, not only addressing the use of facilitator-provided resources but also as part of emerging community practices and interpersonal repertoires.
+
+
 
 | **GDP usage in game making**               | **Description (using CHAT concepts)**                                 |
 | ------------------------------------------ | --------------------------------------------------------------------- |
@@ -137,7 +142,7 @@ Table 6.1: Summary of varied GDP use within the activity of this research
 
 The above table summarises the principal different uses of GDPs in the data analysed.  In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapter’s sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections.
 
-INCLUDE A MERGED DIAGRAM IF THIS IS REALLY HELPFUL BELOW.
+<!-- INCLUDE A MERGED DIAGRAM IF THIS IS REALLY HELPFUL BELOW. -->
 
 An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
 
@@ -771,13 +776,13 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 
 This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs in a table and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
 
-This discussion begins to address the challenge of communicating the diverse mediational strategies beyond the list in the table as a more accessible and practical conceptual model.
+This discussion begins to address the challenge of communicating the diverse mediational strategies beyond the list in the table, suggesting SDBE's concept of repertoires (and signposting a more accessible and practical conceptual model).
 
-I then turn to the motivations and forms of the object of activity involved, it returns to concepts of flow and computational fluency present in CGD&P research.
+I then turn to the motivations and a synthesis  of an expanded concept of the object of activity involved. My attention returns to concepts of flow and computational fluency present in CGD&P research, suggesting an extension to include developing concepts of agency in the process.
 
 AND THEN SIGNPOSTS Ch.7 also
 
-### Addressing the use of GDPs in relation to understanding representing the processes of mediation process 
+### Addressing the use of GDPs in relation to understanding representing the processes of mediation process
 
 Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
 
@@ -787,24 +792,32 @@ This chapter has developed analysis of activity by focusing on the germ cell con
 INSERT TABLE HERE.
 
 
+Given that both the wider object of activity represented at the community game making process and the narrower object of each game instance, can be interpreted as a shared object for expanded, interacting processes of activity.
+AND THAT THEY ARE COMPLEX OBJECTS. Attempts to represent the variety of uses of GDPs within the technique of triangular visual representations would be problematic.
+
+In particular, the complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand would be difficult to communicate. Similarly, representation of the interplay of mediational strategies of tool use with the community level of activity and activity wider systems would also be challenging and unwieldy. As Engeström and Saninno [@engestrom_mediated_2021] note in discussing challenges of representing new generations of AT, you can't keep adding triangles.
+
+SO WHAT?
+SIGNPOSTING TO CHAPTER 7 REPRESENTATION?
+LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
+
 
 <!-- The findings expose complex activity which presents challenges in terms of graphical representation using 3GAT methods. The uses of GDPs within the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a triangular form of mediation involving subject, tool, and object mediation . -->
 
 <!-- ![Figure 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_2.png){width=95%} -->
 
-Attempts to represent the variety of uses of GDPs within the technique of triangular visual representations would be problematic. In particular, the complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand would be difficult to communicate. Similarly, representation of the interplay of mediational strategies of tool use with the community level of activity and activity wider systems would also be challenging and unwieldy. As Engeström and Saninno [@engestrom_mediated_2021] note in discussing challenges of representing new generations of AT, you can't keep adding triangles.
-
-Both the wider object of activity represented at the community game making process and the narrower object of each game instance, can be interpreted as a boundary object for expanded, interacting processes of activity. Narrower still, returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study. While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate such joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs outlined above to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006].  
-
-
 ### Expanded object in terms of motivation - fluency towards agency
 
-<!-- NOTE To restructure. -->
+3GAT guides researchers to describe expansions of the object of activity.
 
+THIS ISN'T CLEAR -
+Given the complexity of the object being worked on in this research, and complex nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], it is not surprising that a diversity of conceptualisations of what experience or attribute is being developed in participant in CGD&P or similar digital making.
 
-Given the complexity of the object being worked on in this research, and multi-faceted nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], it is not surprising that a diversity of conceptualisations of what experience or attribute is being developed in participant in CGD&P or similar digital making.
+The discussion in Chapter 5 outlined an extensive reflection my motivations in the changing design, a process starting from a point of facilitating a collaborative learning environment. While collaboration was certainly important, it did not summarise my motivations well.
 
-However, a related strand grouped around different forms of technical fluency [@papert_technological_1995] was explored in Chapter 2 with common features of domain proficiency, self-expression and identity formation and an experience of flow. One of the motivational factors guiding the evolution of the learning design of this study was to keep participants engaged and thus remaining or in a state of flow [@perttula_flow_2017]. The guiding principle being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
+Turning to existing literature for explorations of motivations driving CGD&P and similar areas, a strand grouped around different forms of technical fluency [@papert_technological_1995] was explored in Chapter 2 with common features of domain proficiency, self-expression and identity formation and an experience of flow.
+
+One of the motivational factors guiding the evolution of the learning design of this study was to keep participants engaged and thus remaining or in a state of flow [@perttula_flow_2017]. The guiding principle being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
 
 <!-- , and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.   -->
 
@@ -814,6 +827,7 @@ Clive (p) quickly incorporated a boost to player health after a level after bein
 
 Extending Basawapatna and colleagues [-[@basawapatna_zones_2013]] approach to support proximal flow (see Chapter 2) via just in time documentation aligned with participants goal to support participant engagement, adding greater specificity and choice over which game patterns participants implement. This adaptation help greater alignment with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016].
 
+Signposting to Chapter 7.
 
 
 <!-- Returning to the gaps in research outline in Chapter 2 in regarding CGD&P
