--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -34,7 +34,7 @@ title: 5. Findings - Design Narrative
             -   [Graphical asset
                 scaffolding](#graphical-asset-scaffolding)
             -   [Level design](#level-design)
-            -   [Brief section on Impact](#brief-section-on-impact)
+            -   [Brief analysis](#brief-analysis)
         -   [Contradiction area 2: contradictions associated with
             project navigation and use of
             documentation](#contradiction-area-2-contradictions-associated-with-project-navigation-and-use-of-documentation)
@@ -49,40 +49,25 @@ title: 5. Findings - Design Narrative
                     snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
             -   [Brief observations on
                 impact](#brief-observations-on-impact)
-        -   [Contradiction area 2: contradictions associated with
-            project navigation and use of
-            documentation](#contradiction-area-2-contradictions-associated-with-project-navigation-and-use-of-documentation-1)
+        -   [Contradiction area 3: tensions and barriers in cultural
+            aspects of the game-making
+            activity](#contradiction-area-3-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
             -   [Description of what
                 happened](#description-of-what-happened-2)
             -   [Surfaced tensions and framed
                 contradiction](#surfaced-tensions-and-framed-contradiction-2)
-        -   [Design response](#design-response-2)
-            -   [Quick start cards](#quick-start-cards-1)
-            -   [Structuring instructional tutorial resources and code
-                snippets](#structuring-instructional-tutorial-resources-and-code-snippets-1)
-        -   [Brief observations on
-            impact](#brief-observations-on-impact-1)
-        -   [C3 - Responding to tensions and barriers in cultural
-            aspects of the game making
-            activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
-            -   [Playing games, identifying game elements & the use of
-                physical
-                materials](#playing-games-identifying-game-elements-the-use-of-physical-materials)
-            -   [Social coding processes - MIX OF NEED AND DESIGN AND
-                RESULT?](#social-coding-processes---mix-of-need-and-design-and-result)
+            -   [Design response](#design-response-2)
+                -   [Social coding processes](#social-coding-processes)
+            -   [PERHAPS DROP? SHIFT FROM THIS
+                SECTION?](#perhaps-drop-shift-from-this-section)
+                -   [Use of side missions to encourage varied creative
+                    practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [SUMMARY AND LINK](#summary-and-link)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [TABLE OF THE DESIGN
-            FACTORS.](#table-of-the-design-factors.)
-            -   [Exploring systemic tensions in relation to existing
-                research](#exploring-systemic-tensions-in-relation-to-existing-research)
-            -   [DBR, CHAT & GDPs as the germ cell concept (unit of
-                analysis)](#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis)
-            -   [Outlining the key stages of GDP use in the structural
-                learning
-                design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
-        -   [Summary and link to next
-            chapter/s](#summary-and-link-to-next-chapters)
+        -   [Analysis and discussion in relation to exising research -
+            UMC, half-baked, and constructionist
+            heuristics](#analysis-and-discussion-in-relation-to-exising-research---umc-half-baked-and-constructionist-heuristics)
+            -   [Harbour metaphor](#harbour-metaphor)
     -   [Footnotes](#footnotes)
 
 # Findings: Design Narrative
@@ -133,6 +118,8 @@ The significance of activity at this scope underpins my proposal of GDPs as a ge
 
 <!-- Integrate LATER
 Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen undertaking chains of processes in a fluid way, indicating that these actions had become operations. The following sections extend this analysis by exploring three core areas of contradiction that shaped the evolving learning design. -->
+
+
 
 
 ## Narrative exploration of key areas of contradictions emerging in the game-making learning design (in P1 /P2?)
@@ -222,23 +209,26 @@ Figure 5.grid - Grid based editing of level design with a simple key for hazards
 Technically, each level is a JavaScript object consisting of a data array of 12 entries containing 17 characters which representing a matrix layout of the game. Each grid entry can be either black or one of the following: x (platform); h (hazard); o (coin). The structure of text-based array has a strong visual correlation with the resulting game layout and changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area. This solution abstracts away complexity and repetitive nature of asset placement mirroring a technique called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (see glossary and Appendix.tech).
 
 
-#### Brief section on Impact
+#### Brief analysis
 
-The scope of this section is to summarise some of the ways in which the design helped address the tensions described above. The aim is not to prove efficacy of the intervention rather than to explain its role in the iteration.
+STRUCTURE - PERSONAL - INTER - CULTURAL?
+
+The scope of this section is to summarise and analyse some of the ways in which the design helped address the tensions described above. The aim is not to prove efficacy of the intervention rather than to explain its role in the iteration.
 
 <!-- INCLUDE SOME INTERVIEW DATA IF USEFUL.
 IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
 A BIT MOE OF A SUMMARY.. -->
 
-The use of a template aligned with half-baked approach helped by introducing coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities.
+The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities, a tension explored in a later section [^ab].
 
-It addressed the desire for more hands on play earlier in the process outlined by one family in P1 feedback. CHECK THIS FOR DUPLICATION AND SUPPORT
+
+
+While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support [^dg].
+
+Vignette 1 shows Toby designing many levels as a way of making his game distinct from others. This technical adaptation thus had a knock-on impact ton the cultural aspects of the coding processes.
 
 The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group.
 
-While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support.
-
-This chapter's vignette (Appendix 5.toby), where Toby designs many levels as a way of making his game distinct from others, illustrates the impact of this technical adaptation on the evolution of social coding processes a theme which is explored in more detail in the section contradiction area 3.
 
 ### Contradiction area 2: contradictions associated with project navigation and use of documentation
 
@@ -418,7 +408,31 @@ The section begins with a table which begins a process of synthesis of design fa
   - authenticity and blackboxing in particular as a constructionist approach
 - DBR -> germ cell & use of collection of GPD  -->
 
+
+
+
+### Analysis of the process so far with CHAT and DBR
+
+Table 5.2 above shows a summary of some of the tensions and design resolutions that emerged from the process.
+
 INSERT TABLE OF THE DESIGN FACTORS.
+
+Table 5.2
+
+At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^ag]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
+
+The emergent and mutual nature of this design process aligns with both DBR principles and CHAT concepts of transformational agency by double stimulation (TADS). Specifically, transformation in tool use based on explicit and implicit feedback.
+
+The design approach that followed the moments of contraction outlined above  was responsive and uncertain. The process requiring me to rapidly generate and adapt software, documentation and processes in response to rapid identification and analysis of manifestations of emerging conflicts.  
+
+The descriptions of this chapter also show the process to be demanding on participants. I was fortunate that the tenacious character of the participants in P1 helped mitigate the challenges posed by the challenges introduced incomplete design.
+
+The design narrative above has acknowledges my active input into the direction of the process in line with an activist stance in terms of steering the design towards collaborative learning opportunities [@stetsenko2020radical]. My reflective analysis within journal entries show that While this general direction was present from early stages, my this on-going process served a purpose to divine a deeper understanding of my own guiding motivations driving the design changes [^co].
+
+
+<!-- In 3GAT terminology, the affordances of my design can be framed as a series of secondary stimuli. Sannino [@sannino_principle_2015] highlights the intersection of the use of secondary stimuli by participants and their volitional action or agency. While subsequent chapters explore shifts in the overall structure of participant activity in alignment with concepts of relational and transformative agency,  -->
+
+<!-- Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
 <!-- To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, a focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept. -->
 
@@ -430,13 +444,23 @@ The concept of affordances, commonly used in DBR, is present in this design thro
 
 <!-- In 3GAT terminology, the affordances of my design can be framed as a series of secondary stimuli. Sannino [@sannino_principle_2015] highlights the intersection of the use of secondary stimuli by participants and their volitional action or agency. While subsequent chapters explore shifts in the overall structure of participant activity in alignment with concepts of relational and transformative agency, the evolution of these tools, based on the novice status of the participants, also led to an increase in instrumental agency. This instrumental proficiency was required before the rich set of interactions based on peer learning and other social coding processes could emerge in playtesting practices. Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
+### Analysis and discussion in relation to exising research - UMC, half-baked, and constructionist heuristics
+
 Key observations outlined in the table above align with the supported benefits outlined in research on the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] and the specific technique of starting with a half baked game template [@grizioti_game_2018-1].
 
 The alignment of the underlying principles of the learning design with research constructionist design heuristics, in particular half-baked designs process merits deeper exploration. A CONTRIBUTION?
 
-The work of Kynigos et al. [@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the use and modify stages of the UMC approach. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982]. The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way. In addition, the framework of UMC highlights the benefits of a stage-based design. In this design, this staged approach is enacted through the interaction of participants with code via increasingly sophisticated documentation. My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
+The work of Kynigos et al. [@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the use and modify stages of the UMC approach. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].
 
-Turning to constructionist research, a more extensive set of design heuristics is evident in studies of decisions made in creating microworld environments and in the development of Scratch (see Chapter 2 for a summary). Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech. Of particular relevance to this design process is the principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild. Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas. The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations. In my design, the Phaser game-making code library framework serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. In addition, my starting game template further simplified these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld. When compared to other game coding programs using text languages this learning design can be seen as tightly structured. However, when compared to a constructionist microworld, the structure of my learning design is compromised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems. I argue that increased scaffolding of learner resources and tools can enhance instrumental agency for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities. The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
+The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way. In addition, the framework of UMC highlights the benefits of a stage-based design. In this design, this staged approach is enacted through the interaction of participants with code via increasingly sophisticated documentation. My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
+
+Turning to  design heuristics proposed by constructionist research for creative computing enviroonments [^dh], of particular relevance to this design process is the principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild.
+
+Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas.
+
+Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech.
+
+The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations. In my design, the Phaser game-making code library framework serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. In addition, my starting game template further simplified these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld. When compared to other game coding programs using text languages this learning design can be seen as tightly structured. However, when compared to a constructionist microworld, the structure of my learning design is compromised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems. I argue that increased scaffolding of learner resources and tools can enhance instrumental agency for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities. The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
 
 Addressing authenticity in more detail, it is valuable to re-examine the factors driving my choice of JavaScript and Phaser, a professional, open-source game-making framework. Specifically, this choice relates to the potentially empowering impact of exposing participants to authentic technologies and concepts in hands-on, exploratory processes. Ratto [-@ratto_critical_2011] discusses this through critical making, a process that playfully brings forward Latour's [-@weibel_making_2005; -@latour_cautious_2008] ideas of shifting from matters of fact to matters of concern by revealing taken-for-granted artefacts as deliberately designed objects. This was evident in conversations between participants where they expressed a sense of inspiration or engagement with previously unknown technologies. For instance, exchanges demonstrated a growing appreciation for the complexity behind professional games, based on their perception of the effort required for their own simple game projects:
 
@@ -451,13 +475,38 @@ A possible drawback of using a professional tool for novice learners is the risk
 In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stage-based approach which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
 
 
-THIS STEPPED PROGRESSION COULD BE EXPRESSED AS A TABLE.  
+<!-- THIS STEPPED PROGRESSION COULD BE EXPRESSED AS A TABLE - OR A GRAPHIC .   -->
+
+![](./Pictures/staged_processes_v1.png){width=95%}
+
+Figure 5.x - Staged processes
 
 This stepped approach which increases complexity of the objective of activity, is present only in limited  CGD&P research. The work of Repenning on SGD operationalises this concepts through guiding learners to undertake projects which are progressively more complex.
-This work differs in a core template is provided allowing for less instruction following and the progression does not involve starting from stratch each time.
-This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it (add this in as appendix using interview data).
+
+This work differs in a core template is provided allowing for less instruction following and the progression does not involve starting from scratch each time. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it  [^mi].
 
 In line with UMC, an advanced stage of the stage based approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
+
+#### Harbour metaphor
+
+The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. In this metaphor the microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. In addition, other learning design choices create a sheltered learning environment, shielded but not cut off from the complexity of online documentation and support.
+
+![](./Pictures/harbour_v1.png){width=95%}
+
+Figure 5.x - Harbour metaphor
+
+
+Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space. Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea. Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. The term harbour is also used metaphorically to indicate a space of safety, nurturing, or a gathering space for a community.
+
+Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships. This chapter has highlighted  mechanisms for participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
+
+In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. The safe nature of the harbour encourages free exploration within the protective walls. The boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. However, these restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014].
+
+But harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms. In early stages, the process of clicking remix to expose the underlying code and try to fix and improve an incomplete game exposes a new frontier language of text code which for many will involves entering unfamiliar waters. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024]. Thus, while this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies and to instead highlight design affordances that facilitate creative agency. The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice. An example of this being Toby and Dan (in Vignette 7.a) who, in their choice to change the game genre from platformer to maze game, leave the safety of a set of design patterns and paired support documentation.
+
+
+
+
 
 <!-- MOVE OR SUMMARISE
 GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool.  -->
@@ -473,10 +522,6 @@ The structure of documentation, created in response to participant requests for 
 
 <!-- NOTE / MOVE - It could be seen as a progression to move from more scaffolded use of instructions to the use of code snippets alone with practice although data of Toby may not support that progression suggesting instead it may be a matter of preference. -->
 
-
-
-
-
 <!-- LINK  -->
 This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration. Two key lines of inquiry which illuminate the cultural and social dimensions of game-making are explored in subsequent chapters. Chapter 7 examines the impact of emerging community processes on participants’ agency, while the Chapter 6 employs video data to describe and analyse the diverse applications of GDPs.
 
@@ -484,8 +529,14 @@ Gilbert is the worsted name.
 
 ## Footnotes
 
+[^dh] These design heuristics present in decisions made in creating microworld environments, the development of Scratch software, and constructionist gaming research include: principles of low floors, wide walls, high ceilings, open windows and choosing black boxes carefully (see Chapter 2 for a summary).
+
 [^tt]: these tools are explored in a following section and include: a web-based coding tool (code playground), a game template that serves as the base for his game project, and a menu of documentation linking to code examples and tutorials.
 [^cp]: Code playgrounds, as described in Chapter 2, are online environments used to test, share or invite help from online users on complete or partial code projects or problems, primarily for web-based project involving the technologies of HTML, CSS and variations of JavaScript (for more detail see Appendix 5.tech)
+
+[^ab]: This tension is explored  in full in Appendix.bee and analysed in the C3 section of this chapter.
+
+[^dg]: Debugging in relation to the use of GDPs is explored in more detail in Chapter 6.
 
 [^qs]: A version of the quick start cards and a fuller description of their development by trainee teacher student helpers is available online and as part of Appendix.tech.
 [^pl]: Mark and Ed described themselves as plodding throught that step by step documentations in Vignette ?
@@ -515,3 +566,9 @@ Gilbert is the worsted name.
 [^7]: https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#create-a-game-space
 [^8]: https://www.piskelapp.com
 [^9]: https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/
+
+[^mi]: The process of having to change the underlying strcuture of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
+
+[^ag]: The process of developing shifting forms of agency is explored in more depth in Chapter 7
+
+[^co]: These reflections on my own deeper motivations are explored in the discussion section of Chapter 6 in relations to the complex and expanded object of activity of this research.
