--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -201,7 +201,7 @@ While I made several technical adjustments to facilitate the swapping of partici
 
 #### Level design
 
-Addressing level design, in P1 the process was relatively complex involving changing parameters of functions to change asset location, and spiralling code complexity (see Appendix 5.chapter). Instead, to align with research on the value of a visual approach to coding multi-media projects for novices [@guzdial_programming_2004; @resnick_scratch:_2009],  in the P2 starting template the use of a graphical grid structure to edit level design shown in Fig 5.grid. A minimal choice of level design elements were represented specifically; platforms to be jumped on; hazards to be avoided; and rewards to be collected.
+Addressing level design, in P1 the process was relatively complex involving changing parameters of functions to change asset location, and spiralling code complexity (see Appendix 5.chapter). Instead, to align with research on the value of a visual approach to coding multi-media projects for novices [@guzdial_programming_2004; @resnick_scratch_2009],  in the P2 starting template the use of a graphical grid structure to edit level design shown in Fig 5.grid. A minimal choice of level design elements were represented specifically; platforms to be jumped on; hazards to be avoided; and rewards to be collected.
 
 ![](./Pictures/grid_editor_1.png){width=95%}
 Figure 5.grid - Grid based editing of level design with a simple key for hazards, coins, and platforms.
