--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -549,7 +549,7 @@ Gilbert is the worsted name.
 
 [^10]: Mark and Ed described themselves as plodding throught that step by step documentations in Vignette ?
 
-[^11]: The evolution and of this theming is outlined in more detail in Appendix.tech.gameframework.
+[^11]: The evolution and of this theming is outlined in more detail in Appendix 5.theming
 
 [^12]: Research by Kafai, Burke and Peppler in particular on varied approaches to address alienation to coding games has been explored in Chapter 2.
 
