--- a/_posts/thesis_chapters/tocs/2025-6-5-Design_v12.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-6-5-Design_v12.md_toc.md
@@ -52,6 +52,8 @@
                     practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [SUMMARY AND LINK](#summary-and-link)
     -   [Chapter Discussion](#chapter-discussion)
+        -   [Analysis of the process so far with CHAT and
+            DBR](#analysis-of-the-process-so-far-with-chat-and-dbr)
         -   [Analysis and discussion in relation to exising research -
             UMC, half-baked, and constructionist
             heuristics](#analysis-and-discussion-in-relation-to-exising-research---umc-half-baked-and-constructionist-heuristics)
