--- a/_posts/thesis_chapters/tocs/2025-6-6-Gdps_v1.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-6-6-Gdps_v1.md_toc.md
@@ -28,8 +28,7 @@
             representing the processes of mediation
             process](#addressing-the-use-of-gdps-in-relation-to-understanding-representing-the-processes-of-mediation-process)
         -   [Expanded object in terms of motivation - fluency towards
-            agency
-            -](#expanded-object-in-terms-of-motivation---fluency-towards-agency--)
+            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
