work on design  appendices

--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -444,7 +444,7 @@ The concept of affordances, commonly used in DBR, is present in this design thro
 
 <!-- In 3GAT terminology, the affordances of my design can be framed as a series of secondary stimuli. Sannino [@sannino_principle_2015] highlights the intersection of the use of secondary stimuli by participants and their volitional action or agency. While subsequent chapters explore shifts in the overall structure of participant activity in alignment with concepts of relational and transformative agency, the evolution of these tools, based on the novice status of the participants, also led to an increase in instrumental agency. This instrumental proficiency was required before the rich set of interactions based on peer learning and other social coding processes could emerge in playtesting practices. Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
 
-### Analysis and discussion in relation to exising research - UMC, half-baked, and constructionist heuristics
+### Analysis and discussion in relation to existing research - UMC, half-baked, and constructionist heuristics
 
 Key observations outlined in the table above align with the supported benefits outlined in research on the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] and the specific technique of starting with a half baked game template [@grizioti_game_2018-1].
 
