changing where table is in Ch. 6

--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -786,11 +786,14 @@ AND THEN SIGNPOSTS Ch.7 also
 
 Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
 
-This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. A fuller table now summarises this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
+This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources.
 
+A fuller table summarising this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts and linking to supporting evidence is included in the Appendix WHICH ONE.
 
-INSERT TABLE HERE.
+The table lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
 
+REVISIT AND CLARIFY.
+GDPS, are used not just mediation as a tool, but also as a concept, so much so that it merits it's own activity system.
 
 Given that both the wider object of activity represented at the community game making process and the narrower object of each game instance, can be interpreted as a shared object for expanded, interacting processes of activity.
 AND THAT THEY ARE COMPLEX OBJECTS. Attempts to represent the variety of uses of GDPs within the technique of triangular visual representations would be problematic.
@@ -836,18 +839,12 @@ The limitations here are on detail on how to enact identity formation via specif
 
 <!-- The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions. -->
 
-
-
-
 <!-- - as a means of identity formation in groups and collectives [@gee_chapter_2000]
 - Via  more general (non-coding) participation in communities, i.e. well informed feedback  on other projects.   -->
-
 
 <!-- NOTE CHALLENGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION. -->
 
 <!-- NOTE - IS THIS IN THE NEXT CHAPTER? is this just in relation to GDPs? -->
-
-
 
 <!-- The collection of GDPs with linked documentation fulfils this role.    
 
