--- a/_posts/thesis_chapters/2025-6-5-Design_v12.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v12.md
@@ -163,7 +163,27 @@ The following section outlines a technical description of the toolset that emerg
 
 ADD - Signposting sentence for the following sections  at the start
 
-#### Code playground environment
+
+#### END Summary of starting code template structural features
+
+THAT COULD BE A TABLE (OR DEVELOPED) for Chapter
+
+**Code playground:** The use of the code playground helped by providing the following: a place the starting template could be viewed and played. A remix button, which when clicked created a new version of the project that could be adapted.
+
+**Simplified file structure:** The file structure was simplified so that participants were shown only the game.js file.
+
+**Variables at the start of the document:** In tandem with the use of a side by side view of game and code in the interface, small changes in those variables created rapid feedback responses and large changes in the game.
+
+**Piskel as an accessible tool size:** more on this or drop?
+
+**Graphical structuring of the level design using text code:** Changes to level design were highly scaffolded to mimic a tile map approach using text code arrays and regular block graphics.
+
+**Careful design to allow for default Piskel size:**
+The size of the pixels 32 x32
+
+
+
+##### Code playground environment
 
 The use of a code playground and starting template, while technically two separate tools, were experienced by participants as a holistic experience [^4].  The use of code playgrounds by novices can mitigate against some of the initial challenges provided by learning computer coding stemming from  unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004].
 
@@ -207,6 +227,8 @@ Addressing level design, in P1 the process was relatively complex involving chan
 Figure 5.grid - Grid based editing of level design with a simple key for hazards, coins, and platforms.
 
 Technically, each level is a JavaScript object consisting of a data array of 12 entries containing 17 characters which representing a matrix layout of the game. Each grid entry can be either black or one of the following: x (platform); h (hazard); o (coin). The structure of text-based array has a strong visual correlation with the resulting game layout and changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area. This solution abstracts away complexity and repetitive nature of asset placement mirroring a technique called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (see glossary and Appendix.tech).
+
+
 
 
 #### Brief analysis
